--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -42,7 +42,7 @@
             <ng-container matColumnDef="opciones">
               <th mat-header-cell *matHeaderCellDef>Opciones</th>
               <td mat-cell *matCellDef="let element">
-                  <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="accent">
+                  <button (click)=delProduct(element.id) mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="accent">
                     <mat-icon >delete</mat-icon>
                   </button>
                   <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" color="accent">
