--- a/src/app/pages/new-products/new-products.component.html
+++ b/src/app/pages/new-products/new-products.component.html
@@ -1,1 +1,46 @@
-<p>new-products works!</p>
+<div style="display: flex; align-items:center; justify-content:center;">
+
+    <div style="display: flex; flex-direction:column;">
+        <form [formGroup]="formProduct">
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Nombre del producto</mat-label>
+                  <input matInput placeholder="Nombre del producto" type="text" formControlName="name">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Url de la imagen</mat-label>
+                  <input matInput placeholder="Url" type="text" formControlName="url_img">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Precio</mat-label>
+                  <input matInput placeholder="Precio" type="number" formControlName="price">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Categoria</mat-label>
+                  <input matInput placeholder="Categoria" type="text" formControlName="category">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Stock</mat-label>
+                  <input matInput placeholder="Stock" type="number" formControlName="stock">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field appearance="outline">
+                  <mat-label>Descripcion</mat-label>
+                  <input matInput placeholder="Descripcion" type="text" formControlName="description">
+                </mat-form-field>
+            </p>
+
+            <button mat-flat-button color="primary" type="submit">Login</button>
+        </form>
+    </div>
+
+</div>
